# BST_BS_types_set

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.md  config.json  input.csv  input.json  input_brute_force.json  input_debug.json  input_new.json  input_old.json  problem.py  requirements.txt  solution.json
bab/: branch_and_bound.py  bst.py  evaluation.py  feasible_placement.py  optimal_solution.py  schedule.py  search.py
binary_search/: get.py  nodes.py  schedule.py  tree.py
branch_and_bound/: checking.py  noncoverage.py
brute_force/: noncoverage.py
bs/: sta_value.py
bsopcpp/: problem.cpp
connection/: feasible_placement.py
cpp/: problem.cpp
drawing/: feasible_placement_new.py  figure.py
estimation/: noncoverage.py
input/: article_draw_graph.json  article_experience.json  article_experience1.json  article_experience2.json  article_experience3.json  article_experience4.json  article_experience4_debug.json  article_experience4_debug_old.json  article_experience5_debug.json  article_experience6_debug.json  comparison_p10s4.json  comparison_p10s5.json  comparison_p10s6.json  comparison_p10s7.json  comparison_p11s4.json  comparison_p11s5.json  comparison_p11s6.json  comparison_p7s4.json  comparison_p7s5.json  comparison_p7s6.json  comparison_p8s4.json  comparison_p8s5.json  comparison_p8s6.json  comparison_p9s4.json  comparison_p9s5.json  comparison_p9s6.json  comparison_p9s7.json
main/: bab.py  input.py  solver.py  table.py
network/: connection_between_station.py  link_budget.py  performance_characteristics.py
problem/: solution.py
(+72 files in other folders)
